@@ -12,6 +12,8 @@ software-store (0.3.4) UNRELEASED; urgency=low
     - add X-Ubuntu-Gettext-Domain support
   * softwarestore/view/appdetailsview.py
     - extend show_app() to take (appname, pkgname)
+  * softwarestore/view/appview.py:
+    - ensure correct icons for overlapping application names
   
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 16 Sep 2009 12:28:13 +0200
 
